--- a/index.html
+++ b/index.html
@@ -3,49 +3,255 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Angkor Coulture</title>
-    <!-- style-css -->
-    <link rel="stylesheet" href="index.css" />
-    <!-- google-fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Angkor Couture - Modern Cambodian Fashion</title>
+    <!-- font-awesome -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- css -->
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="logo">
-          <a href="./index.html"><img src="./img/logo.jpg" alt="logo" /></a>
-          <a href="./index.html" id="logo">Angkor Coulture</a>
+    <!-- Navigation -->
+    <nav class="navbar">
+      <div class="nav-container">
+        <a href="./index.html" class="logo" data-aos="fade-right">
+          <i class="fas fa-lotus"></i>
+          Angkor Couture
+        </a>
+        <div class="nav-links" data-aos="fade-down">
+          <a href="#">All Products</a>
+          <a href="#">About</a>
+          <a href="#">Service</a>
+          <a href="#">Contact</a>
         </div>
-        <nav class="nav-bar" id="nav">
-          <ul>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="btn">
-          <a href="#" alt="Log in" class="button">Log in</a>
-          <a href="#" alt="Sign up" class="button">Sign up</a>
+        <button class="btn btn-primary" data-aos="fade-left">Sign In</button>
+        <div class="mobile-menu">
+          <i class="fas fa-bars"></i>
         </div>
-      </header>
+      </div>
+    </nav>
 
-      <!-- home section -->
-      <section class="hero">
-        <div class="hero-container">
-          <h1>Modern Cambodian Fashion</h1>
-          <p>
-            Inspired by traditional, crafted with sustainable fabrics. Ethical
-            Production. timeless Designs.
-          </p>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-content" data-aos="zoom-in-down">
+        <h1>Modern Cambodian Fashion</h1>
+        <p>
+          Inspired by traditional, crafted with sustainable fabrics. Ethical
+          production, timeless designs.
+        </p>
+        <div class="search-container">
+          <input
+            type="text"
+            class="search-input"
+            placeholder="Search our collection..."
+          />
+          <button class="btn btn-primary">
+            <i class="fas fa-shopping-cart"></i>
+            Shop Now
+          </button>
         </div>
-        <input type="search" placeholder="Search" />
-      </section>
-    </div>
+      </div>
+    </section>
+
+    <!-- Products Section -->
+    <section class="products">
+      <div data-aos="fade-down">
+        <h2 class="section-title">Featured Collection</h2>
+      </div>
+
+      <div class="products-grid" data-aos="fade-up">
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="/api/placeholder/400/400"
+            alt="Product"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-title">Traditional Khmer Dress</h3>
+            <p>Handcrafted silk with modern details</p>
+            <div class="product-price">
+              <span class="price-new">$152.00</span>
+              <span class="price-old">$190.00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Categories -->
+    <section class="categories">
+      <div class="categories-container">
+        <div data-aos="fade-down">
+          <h2 class="section-title">Shop by Category</h2>
+        </div>
+
+        <div class="categories-grid" data-aos="fade-up">
+          <div class="category-card">
+            <img src="/api/placeholder/400/300" alt="Traditional Wear" />
+            <div class="category-overlay">Traditional Wear</div>
+          </div>
+          <div class="category-card">
+            <img src="/api/placeholder/400/300" alt="Modern Fusion" />
+            <div class="category-overlay">Modern Fusion</div>
+          </div>
+          <div class="category-card">
+            <img src="/api/placeholder/400/300" alt="Wedding Collection" />
+            <div class="category-overlay">Wedding Collection</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-section">
+          <h3>Contact Us</h3>
+          <img src="/api/placeholder/100/100" alt="QR Code" />
+        </div>
+        <div class="footer-section">
+          <h3>Follow Us</h3>
+          <div class="footer-links">
+            <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="#"><i class="fab fa-tiktok"></i> TikTok</a>
+          </div>
+        </div>
+        <div class="footer-section">
+          <h3>Quick Links</h3>
+          <div class="footer-links">
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+            <a href="#">Shipping</a>
+            <a href="#">Returns</a>
+          </div>
+        </div>
+        <div class="footer-section">
+          <h3>Payment Methods</h3>
+          <div class="payment-methods">
+            <div class="payment-method">
+              <img src="/api/placeholder/40/25" alt="Payment method" />
+            </div>
+            <!-- Repeat payment-method 5 more times -->
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- aos js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!-- main-js -->
+    <script src="main.js"></script>
   </body>
 </html>
